# Kerbin

./: .gitignore  CLASS_PROJECT_DESC.md  Cargo.toml  FINISHING_TOUCHES.md  Justfile  Makefile  README.md  Rune.toml  config.toml  devenv.nix  flake.nix  hello.tx  hello.txt  install.sh  test.py  tutor.md
booster/: Cargo.toml
booster/src/: build_kb.rs  main.rs
cli/: Cargo.toml
cli/src/: main.rs
config/: .gitignore  Cargo.toml  Makefile  build.kb  config.rn  config.toml  init.kb  keybindings.rn  langs.rn  misc.kb  modeline.rn  shell.kb  special_templates.kb  test.nu  theme.kb  theme.rn  theme.toml
config/config/: config.kb  config.toml  insert.toml  misc.kb  special_templates.kb  special_templates.toml  theme.kb  theme.toml
config/config/core/: command_palette.kb  command_palette.toml  files.kb  init.kb  insert.kb  insert.toml  motions.kb  nav.kb  repeat.kb  repeat.toml  visual.kb
config/config/plugins/: grammars.kb  grammars.toml  init.kb  init.toml  language-servers.kb  lsp.kb  tree-sitter.kb
config/config/utils/: init.kb  init.toml  lsp.kb  lsp.toml  misc.kb  misc.toml  shell.kb  shell.toml  tree-sitter.kb  tree-sitter.toml
config/config/vim/: cursor.kb  cursor.toml  del.kb  del.toml  go.kb  go.toml  init.kb  init.toml  ins.kb  ins.toml  mode.kb  mode.toml  nav.kb  nav.toml  vis.kb  vis.toml
config/core/: cursors.kb  dialogue.kb  history.kb  init.kb  insert.kb  motions.kb  nav.kb  normal.kb  registers.kb  split.kb  visual.kb
config/plugins/: grammars.kb  init.kb  language-servers.kb  languages.kb  lsp.kb
config/runtime/queries/markdown/: highlights.scm
config/runtime/queries/markdown.inline/: highlights.scm
config/runtime/queries/rust/: injections.scm
config/scripts/: diagnostics.sh  fzf.nu  fzf.sh  goto.sh  rg_fzf.sh  yazi.nu  yazi.sh
config/src/: lib.rs
config/vim/: cursor.toml  del.toml  go.toml  init.toml  mode.toml  nav.toml  vis.toml
generated-config/: Cargo.toml
generated-config/src/: lib.rs
kerbin/: Cargo.toml
kerbin-cli/: Cargo.toml
kerbin-cli/src/: lib.rs
kerbin-command-lang/: Cargo.toml
kerbin-command-lang/src/: command.rs  lexer.rs  lib.rs  parser.rs
kerbin-config/: Cargo.toml
kerbin-config/src/: lib.rs
kerbin-core/: Cargo.toml
kerbin-core/src/: buffer_exts.rs  chunk.rs  chunks.rs  debounce.rs  grammar.rs  hooks.rs  input.rs  ipc.rs  kb.rs  layout.rs  lib.rs  logging.rs  regex.rs  resolver.rs  rope_exts.rs  signal.rs  state.rs  statusline.rs  style_exts.rs  theme.rs  word_split.rs
kerbin-core/src/auto_pairs/: commands.rs  interceptor.rs  mod.rs
kerbin-core/src/buffer/: action.rs  buffer_trait.rs  buffers.rs  cursor.rs  events.rs  extmark.rs  mod.rs  systems.rs  text_rope_handlers.rs  tree_sitter.rs
kerbin-core/src/buffer/render/: build.rs  gutter.rs  mod.rs  render_line.rs  renderer.rs  scroll.rs  widget.rs
kerbin-core/src/commands/: buffer.rs  config.rs  cursor.rs  debug.rs  dialogue.rs  if_cmd.rs  input.rs  language.rs  mod.rs  mode.rs  motion.rs  palette.rs  registers.rs  shell.rs  splits.rs  state.rs
kerbin-core/src/dialogue/: mod.rs
kerbin-core/src/ipc/: default_queries.rs
kerbin-core/src/palette/: mod.rs  ranking.rs
kerbin-core/src/states/: chunks.rs  command_interceptor_registry.rs  command_prefix_registry.rs  command_registry.rs  filetype_registry.rs  if_check_registry.rs  inner_chunk.rs  mod.rs  mode_stack.rs  plugin_registry.rs  registers.rs  splits.rs  wrappers.rs
kerbin-input/: Cargo.toml
kerbin-input/examples/: keybindings.toml  toml.rs
kerbin-input/src/: key_bind.rs  lexer.rs  lib.rs  parsers.rs  resolver.rs  tree.rs
kerbin-macros/: Cargo.toml
kerbin-macros/src/: lib.rs
kerbin-plugin/: Cargo.toml
kerbin-plugin/src/: lib.rs
kerbin-serde/: Cargo.toml
kerbin-serde/src/: lib.rs
kerbin-state-machine/: Cargo.toml
kerbin-state-machine/src/: lib.rs  storage.rs
kerbin-state-machine/src/system/: function_system.rs  into_system.rs  mod.rs
kerbin-state-machine/src/system/param/: mod.rs  res.rs  res_mut.rs
kerbin/src/: hooks.rs  main.rs
plugins/: clock.rune  config.rn  config.rune  keybindings.rune  langs.rune  theme.rune
plugins/kerbin-lsp/: Cargo.toml
plugins/kerbin-lsp/src/: autocomplete.rs  client.rs  commands.rs  diagnostics.rs  event.rs  events.rs  facade.rs  format.rs  handlers.rs  hover.rs  jsonrpc.rs  lib.rs  main.rs  manager.rs  navigation.rs  safe_ops_test.rs  text_edit.rs  uriext.rs
plugins/kerbin-lsp/src/client/: facade.rs  mod.rs
plugins/kerbin-lsp/src/handlers/: changes.rs  file_close.rs  file_open.rs  file_save.rs  log_init.rs  manager.rs  mod.rs
plugins/kerbin-tree-sitter/: Cargo.toml  default_grammars.txt
plugins/kerbin-tree-sitter/src/: commands.rs  grammar.rs  grammar_install.rs  grammar_manager.rs  highlight_string.rs  highlighter.rs  indent.rs  install_command.rs  lib.rs  locals.rs  management_commands.rs  motions.rs  query_walker.rs  scope_info.rs  state.rs  text_provider.rs  util.rs
plugins/test-plugin/: Cargo.toml
plugins/test-plugin/src/: lib.rs
plugins/test_plugin/: Cargo.toml
plugins/test_plugin/src/: lib.rs
plugins/tutor/: Cargo.toml
plugins/tutor/src/: lib.rs  load.rs  tutor.md
plugins/tutor/src/tutor/: 0.md  1.md  2.md  3.md  4.md  5.md  6.md  7.md
rune-cli/: Cargo.toml
rune-cli/src/: main.rs
src/: buffer_extensions.rs  command_palette.rs  commands.rs  grammar.rs  highlight.rs  key_check.rs  lib.rs  main.rs  mode.rs  plugin_manager.rs  shell.rs  theme.rs
src/buffer/: action.rs  buffers.rs  mod.rs
src/commands/: mod.rs
src/input/: mod.rs
src/plugin_libs/: chrono.rs  clock.rs
