[workspace]
resolver = "3"
members = [ "kerbin", "kerbin-config", "kerbin-core", "kerbin-input", "kerbin-macros", "kerbin-state-machine", "plugins/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
kerbin-macros = { path = "./kerbin-macros" }
kerbin-core = { path = "./kerbin-core" }

thiserror = "2.0.17"

tokio = { version = "1.47.1", features = [ "full" ] }
async-trait = "0.1.89"

ascii-forge = { version = "2.1.5", features = [ "serde" ] }

serde = { version = "1.0.219", features = [ "derive" ] }

tracing = "0.1.41"

uuid = { version = "1.18.1", features = ["v4"] }

ropey = { version = "=2.0.0-beta.1", features = ["metric_chars", "metric_lines_lf"] }

