[workspace]
resolver = "3"
members = [ "kerbin", "kerbin-config", "kerbin-core", "kerbin-input", "kerbin-macros", "kerbin-state-machine", "plugins/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
kerbin-macros = { path = "./kerbin-macros" }
kerbin-core = { path = "./kerbin-core" }
kerbin-input = { path = "./kerbin-input", features = ["serde"] }

thiserror = "2.0.17"

tokio = { version = "1.47.1", features = [ "full" ] }
async-trait = "0.1.89"

ascii-forge = { version = "2.1.5", features = [ "serde" ] }

serde = { version = "1.0.219", features = [ "derive" ] }

tracing = "0.1.41"

uuid = { version = "1.18.1", features = ["v4", "serde"] }

ropey = { version = "=2.0.0-beta.1", features = ["metric_chars", "metric_lines_lf"] }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.mini]
inherits = "release"
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
