[package]
name = "booster"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }

serde = { workspace = true, features = ["derive"] }
toml = "0.9.10"
dialoguer = "0.12.0"
console = "0.16.2"
indicatif = "0.18.3"
regex = "1.12.2"
serde_json = "1.0.148"
chrono = "0.4.42"
fs_extra = "1.3.0"
dirs = "6.0.0"
