[package]
name = "kerbin-booster"
version.workspace = true
edition.workspace = true

repository = "https://github.com/EmeraldPandaTurtle/Kerbin/tree/master"

description = "Installation manager for the Kerbin editor"
license = "MIT OR Apache-2.0"

[[bin]]
name = "booster"
path = "./src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }

serde = { workspace = true, features = ["derive"] }
dialoguer = "0.12.0"
console = "0.16.2"
indicatif = "0.18.3"
regex = "1.12.2"
serde_json = "1.0.148"
chrono = "0.4.42"
fs_extra = "1.3.0"
dirs = "6.0.0"
