[package]
name = "config"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["dylib"]
name = "config"

[dependencies]
kerbin-core = { path = "../kerbin-core" }

async-ffi = {version = "0.5.0", features = ["macros"]}

# Plugins
kerbin-tree-sitter = { path = "../plugins/kerbin-tree-sitter" }
kerbin-lsp = { path = "../plugins/kerbin-lsp" }
