[package]
name = "kerbin-config"
version.workspace = true
edition.workspace = true

[dependencies]
kerbin-core.workspace = true
kerbin-state-machine = { path = "../kerbin-state-machine" }
serde.workspace = true

tracing.workspace = true

ascii-forge.workspace = true

toml = { version = "0.9.5", features = ["preserve_order"] }
serde-value = "0.7.0"

