[package]
name = "kerbin-core"
version.workspace = true
edition.workspace = true

[dependencies]
kerbin-state-machine = { path = "../kerbin-state-machine" }
kerbin-input.workspace = true

async-trait.workspace = true

uuid.workspace = true

kerbin-macros.workspace = true
ascii-forge.workspace = true

tokio.workspace = true

tracing.workspace = true
tracing-subscriber = "0.3.19"

ropey.workspace = true

shellwords = "1.1.0"
serde.workspace = true
tree-sitter = "0.25.8"
toml = { version = "0.9.5", default-features = false, features = ["display", "fast_hash", "serde"] }
regex-cursor = { version = "0.1.5", default-features = false, features = ["perf-inline"] }

unicode-width = "0.2.1"
