[package]
name = "kerbin-core"
version.workspace = true
edition.workspace = true

[dependencies]
kerbin-state-machine = { path = "../kerbin-state-machine" }
kerbin-input.workspace = true

async-trait.workspace = true

uuid.workspace = true

kerbin-macros.workspace = true
ascii-forge.workspace = true

tokio.workspace = true

tracing.workspace = true
tracing-subscriber = "0.3.19"

ropey.workspace = true

serde.workspace = true

toml = { version = "0.9.5", default-features = false, features = ["display", "fast_hash", "serde"] }

regex = "1.12.2"
regex-cursor = { version = "0.1.5", default-features = false, features = ["perf-inline"] }

unicode-width = "0.2.1"
ipmpsc = "0.5.1"
dirs = "6.0.0"
