[package]
name = "kerbin-core"
version.workspace = true
edition.workspace = true

[dependencies]
kerbin-state-machine = { path = "../kerbin-state-machine" }
kerbin-input.workspace = true
kerbin-command-lang.workspace = true

async-trait.workspace = true

uuid.workspace = true

kerbin-macros.workspace = true
ratatui.workspace = true
crossterm.workspace = true

tokio.workspace = true

tracing.workspace = true
tracing-subscriber = "0.3.23"

ropey.workspace = true

serde.workspace = true

regex = "1.12.3"
regex-cursor = { version = "0.1.5", default-features = false, features = ["perf-inline"] }

unicode-width = "0.2.2"
unicode-segmentation.workspace = true
ipmpsc = "0.5.1"
dirs = "6.0.0"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
