[package]
name = "kerbin-input"
version.workspace = true
edition.workspace = true

[dependencies]
ascii-forge.workspace = true

thiserror.workspace = true

serde = { version = "1.0.228", features = ["derive"], optional = true }
indexmap = "2.12.0"

tracing.workspace = true

[features]
serde = ["dep:serde"]
