[package]
name = "kerbin"
version.workspace = true
edition.workspace = true

[dependencies]
kerbin-config = { path = "../kerbin-config" }
kerbin-core = { path = "../kerbin-core" }
kerbin-plugin = { path = "../kerbin-plugin" }
kerbin-cli = { path = "../kerbin-cli" }

kerbin-state-machine = { path = "../kerbin-state-machine" }

kerbin-macros.workspace = true

tokio.workspace = true

ascii-forge.workspace = true

tracing.workspace = true
tracing-subscriber = "0.3.19"

queue-file = "1.4.10"
dirs = "6.0.0"
