[package]
name = "kerbin"
version.workspace = true
edition.workspace = true

[dependencies]
config = { path = "../config" }

kerbin-config = { path = "../kerbin-config" }
kerbin-core = { path = "../kerbin-core" }

kerbin-state-machine = { path = "../kerbin-state-machine" }

kerbin-macros.workspace = true

uuid.workspace = true

tokio.workspace = true

ascii-forge.workspace = true

tracing.workspace = true
tracing-subscriber = "0.3.19"
dirs = "6.0.0"
clap = { version = "4.5.48", features = ["derive"] }
ipmpsc = "0.5.1"
