[package]
name = "kerbin-lsp"
version.workspace = true
edition.workspace = true

[dependencies]
kerbin-core = { path = "../../kerbin-core" }
kerbin-tree-sitter = { path = "../kerbin-tree-sitter" }

ropey.workspace = true

tokio = { workspace = true, features = ["process", "io-util"] }
serde = { workspace = true }
serde_json = "1.0.145"

lsp-types = "0.97.0"

tracing.workspace = true

