[package]
name = "kerbin-tree-sitter"
version.workspace = true
edition.workspace = true

[dependencies]
kerbin-core = { path = "../../kerbin-core" }
ratatui.workspace = true
libloading = "0.9.0"
tree-sitter = "0.26.7"

ropey.workspace = true

tokio.workspace = true

serde.workspace = true
serde_json.workspace = true
regex.workspace = true
thiserror.workspace = true
tracing.workspace = true
