[package]
name = "test_plugin"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
kerbin-core = { path = "../../kerbin-core" }
kerbin-macros = { path = "../../kerbin-macros" }
async-ffi = { version = "0.5.0", features = [ "macros" ]}

ascii-forge = { version = "1.2.1", features = [ "serde" ] }
